# ros2_lab2

./: README.md
install/: local_setup.sh  setup.sh
install/camera_pack/lib/camera_pack/: cone_detection
install/camera_pack/share/camera_pack/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/goal_sender/share/goal_sender/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/goal_sender/share/goal_sender/cmake/: goal_senderConfig.cmake
install/my_robot_control/share/my_robot_control/: package.bash  package.sh  package.zsh
install/my_robot_control/share/robot_control/: package.xml
install/robot_control/lib/robot_control/: goal_send  send_goals
install/robot_control/share/robot_control/: package.sh
install/sam_bot_description/share/sam_bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sam_bot_description/share/sam_bot_description/cmake/: sam_bot_descriptionConfig-version.cmake  (+1 more)
log/: latest_build
src/camera_pack/: package.xml  setup.cfg  setup.py
src/camera_pack/camera_pack/: cone_detection.py
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: goal_send.py
src/sam_bot_description/config/: nav2_params.yaml  nav2_params_lou.yaml  nav2_params_nosso.yaml
src/sam_bot_description/launch/: display.launch.py
src/sam_bot_description/rviz/: urdf_config.rviz
src/sam_bot_description/src/: object_detection.py
src/sam_bot_description/src/description/: sam_bot_description.urdf
(+15 files in other folders)
