<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>ROS 2 package for controlling a robot</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
